--- a/AI-Agent-Textbook-Notebook/.env
+++ b/AI-Agent-Textbook-Notebook/.env
@@ -1,4 +1,3 @@
 
-OPENAI_API_KEY = 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
-
-GOOGLE_API_KEY = AIzaSyDnojuvBJ5IJbk3GZ-T1gcH8CoLP2bDrus
+OPENAI_API_KEY = 
+GOOGLE_API_KEY = 
