all task completed

--- a/Session-04&05/agentic-notebooks/.env
+++ b/Session-04&05/agentic-notebooks/.env
@@ -1,2 +1,12 @@
 
+# OPENAI_API_KEY = put Your API key from https://platform.openai.com/ 
+
 OPENAI_API_KEY = 
+
+# PUSHOVER_USER=_put the key that's on the top right of your Pushover home screen and probably starts with a u_  
+
+PUSHOVER_USER= 
+
+# PUSHOVER_TOKEN=_put the key when you click into your new application called Agents (or whatever) and probably starts with an a_
+
+PUSHOVER_TOKEN= 
